# GW2Nexus-CommanderMarkers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: nexus-release.json
assets/data/: builtin_marker_set_ids.json  default_markers.json
build-test/: CMakeCache.txt
cmake/: GenerateAddonMetadata.cmake
scripts/: build-release.sh  deploy-to-gw2.ps1  deploy-to-gw2.sh  embed_assets.py
src/: entry.cpp
src/core/: AccountRegistry.cpp  AccountRegistry.h  AppState.cpp  AppState.h  AppStateBackground.cpp  AppStateDetail.h  AppStateInit.cpp  Branding.h  FeatureFlags.h  MumbleUtils.cpp  MumbleUtils.h  SettingsStore.cpp  SettingsStore.h  Types.h
src/data/: CommunityMeta.cpp  CommunityMeta.h  Gw2MapJson.h  MapDataCache.cpp  MapDataCache.h  MarkerDefinition.h  MarkerSetClipboard.cpp  MarkerSetClipboard.h  MarkerSetJson.cpp  MarkerSetJson.h  StaticDataLoader.cpp  StaticDataLoader.h  SyncBaselineHash.cpp  SyncBaselineHash.h
src/services/: CommunityCatalogService.cpp  CommunityCatalogService.h  CommunityMarkerService.cpp  CommunityMarkerService.h  Gw2ApiClient.cpp  Gw2ApiClient.h  Gw2MapApiClient.cpp  Gw2MapApiClient.h  HttpClient.cpp  HttpClient.h  MapWatchService.cpp  MapWatchService.h  MarkerListing.cpp  MarkerListing.h  MarkerPlacementService.cpp  MarkerPlacementService.h  ModuleManifestService.cpp  ModuleManifestService.h  PreviewImageCache.cpp  PreviewImageCache.h  RtApiService.cpp  RtApiService.h  SubtokenService.cpp  SubtokenService.h
src/ui/: BillboardRenderer.cpp  BillboardRenderer.h  CommunityLibraryUi.cpp  CommunityLibraryUi.h  DatAssetIconService.cpp  DatAssetIconService.h  LibraryEditorUi.cpp  LibraryEditorUi.h  LibrarySearchUi.h  MapPickerUi.cpp  MapPickerUi.h  MapPreviewPopupUi.cpp  MapPreviewPopupUi.h  MarkerSetEditorWindow.cpp  MarkerSetEditorWindow.h  MarkersPanel.cpp  MarkersPanel.h  OptionsApiTab.cpp  OptionsApiTab.h  OptionsPanel.cpp  OptionsPanel.h  OptionsUiKit.cpp  OptionsUiKit.h  OverlayPanel.cpp  OverlayPanel.h  QuickAccessService.cpp  QuickAccessService.h  ScreenMapOverlay.cpp  ScreenMapOverlay.h  SettingsWindow.cpp  SettingsWindow.h  SquadMarkerIconPicker.cpp  SquadMarkerIconPicker.h  TextureService.cpp  TextureService.h  UiFontService.cpp  UiFontService.h  UiLayer.h
src/utils/: Base64Codec.cpp  Base64Codec.h  GameScanCode.cpp  GameScanCode.h  InteractBindService.cpp  InteractBindService.h  MarkerBindHelper.cpp  MarkerBindHelper.h  MarkerPlacementHelper.cpp  MarkerPlacementHelper.h  MumbleIdentity.cpp  MumbleIdentity.h  UuidUtils.cpp  UuidUtils.h  WorldProjection.cpp  WorldProjection.h
